Add link to source as suggested by AGPL text

--- a/src/imageserver/templates/index.html
+++ b/src/imageserver/templates/index.html
@@ -45,4 +45,8 @@
 	<p class="center">
 		{{ about.__copyright__ }}
 	</p>
+	<p class="center">
+		Licensed mostly under the <a href="http://www.gnu.org/licenses/agpl-3.0.txt">GNU Affero GPL</a>,<br />
+		source available <a href="{{ about.__source_uri__ }}">on GitHub</a>.
+	</p>
 {% endblock %}
