Adds template admin pages (not yet functional)
Also refactored TemplateAttrs to be consistent with ImageAttrs.  Am
intending to use the same UI code for template admin as is used for the
image publisher.

--- a/src/imageserver/admin/static/styles/admin.css
+++ b/src/imageserver/admin/static/styles/admin.css
@@ -23,6 +23,16 @@
 	Last Changed:  $Date$ $Rev$ by $Author$
 */
 
+.list_table {
+	margin-top: 1em;
+	width: auto;
+}
+@media screen and (min-width: 1024px) {
+	.list_table {
+		max-width: 66%;
+	}
+}
+
 .draggable {
 	cursor: pointer;
 	cursor: -webkit-grab;
