--- a/src/imageserver/templates/base.html
+++ b/src/imageserver/templates/base.html
@@ -35,16 +35,14 @@
 				&nbsp;|&nbsp;&nbsp;
 				<div id="admin_action_menu" class="action_menu border shadow">
 					<ul>
-						{% set spacer=false %}
+						<li><a href="{{ url_for('admin.template_list') }}">Image templates</a></li>
 						{% if is_permitted(SystemPermission.PERMIT_ADMIN_USERS) %}
+						<li class="spacer">&nbsp;</li>
 						<li><a href="{{ url_for('admin.user_list') }}">Users</a></li>
 						<li><a href="{{ url_for('admin.group_list') }}">Groups</a></li>
-						{% set spacer=true %}
 						{% endif %}
 						{% if is_permitted(SystemPermission.PERMIT_ADMIN_PERMISSIONS) %}
-						{% if spacer %}
 						<li class="spacer">&nbsp;</li>
-						{% endif %}
 						<li><a href="{{ url_for('admin.folder_permissions') }}">Folder permissions</a></li>
 						{% endif %}
 						{% if is_permitted(SystemPermission.PERMIT_SUPER_USER) %}
