--- a/src/imageserver/templates/publish/input_BooleanValidator.html
+++ b/src/imageserver/templates/publish/input_BooleanValidator.html
@@ -1,2 +1,2 @@
 <input type="checkbox" name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
-       {% if default %}checked{% endif %} value="1" autocomplete="off">
+       {% if default %}checked="checked"{% endif %} value="1" autocomplete="off">
