Template admin - viewing now functional, not yet editing

--- a/src/imageserver/admin/templates/admin_template_edit.html
+++ b/src/imageserver/admin/templates/admin_template_edit.html
@@ -69,7 +69,7 @@
 			<fieldset class="fieldset_merge subtlebg">
 				<div>
 					<label>Client caching duration:</label>
-					{{ input('expiry_secs') }} seconds
+					{{ input(fields, field_values, 'expiry_secs') }} seconds
 					{{ help('option_expires') }}
 					<span class="field_default">
 						Server default: {{ settings.IMAGE_EXPIRY_TIME_DEFAULT }}
