--- a/src/imageserver/templates/publish/input_fill.html
+++ b/src/imageserver/templates/publish/input_fill.html
@@ -1,2 +1,2 @@
 <input type="color" name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
-       value="{{ default }}" autocomplete="off">
+       value="{{ default|default('#ffffff') }}" autocomplete="off">
