--- a/src/imageserver/static/styles/base.css
+++ b/src/imageserver/static/styles/base.css
@@ -403,20 +403,20 @@ a:hover .highlight {
 
 /* Image preview popup
  */
-#preview_popup {
+.preview_popup {
 	position: absolute;
 	top: 1px;
 	left: -1000px;
 	visibility: hidden;
 	clear: both;
 }
-#preview_popup img {
+.preview_popup img {
 	vertical-align: middle;
 }
-#preview_popup span { /* IE<8 fix, trigger hasLayout, also see JS */
+.preview_popup span { /* IE<8 fix, trigger hasLayout, also see JS */
 	display: inline-block;
 }
-#preview_popup_left {
+.preview_popup_left {
 	width: 20px;
 	height: 200px;
 	position: relative;
@@ -426,7 +426,7 @@ a:hover .highlight {
 	background-position: center;
 	background-repeat: no-repeat;
 }
-#preview_popup_right {
+.preview_popup_right {
 	width: 220px;
 	height: 200px;
 	line-height: 200px;
@@ -435,4 +435,22 @@ a:hover .highlight {
 	margin-left: 19px;
 	text-align: center;
 	background-color: #ffffff;
+}
+
+/* Image preview popup - iframe mode
+ */
+.iframe .preview_popup_left,
+.iframe .preview_popup_right {
+	height: 400px;
+}
+.iframe .preview_popup_right {
+	width: 650px;
+}
+
+.preview_popup iframe {
+	width: 96%;
+	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	border: none;
 }
