--- a/src/imageserver/templates/list.html
+++ b/src/imageserver/templates/list.html
@@ -24,8 +24,10 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/list.css') }}" type="text/css" />
 
 	{% if settings.DEBUG %}
+	<script src="{{ url_for('static', filename='js/preview_popup.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/list.js') }}" type="text/javascript"></script>
 	{% else %}
+	<script src="{{ url_for('static', filename='js/preview_popup_yc.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/list_yc.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
