--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -88,9 +88,11 @@
 	<script src="{{ url_for('static', filename='js/lib/highlight.pack.js') }}" type="text/javascript"></script>
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/lib/lassocrop.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/preview_popup.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/publish.js') }}" type="text/javascript"></script>
 	{% else %}
 	<script src="{{ url_for('static', filename='js/lib/lassocrop_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/preview_popup_yc.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/publish_yc.js') }}" type="text/javascript"></script>
 	{% endif%}
 {% endblock %}
