--- a/src/imageserver/templates/details.html
+++ b/src/imageserver/templates/details.html
@@ -69,15 +69,15 @@
 					<div id="image_action_menu" class="action_menu border shadow">
 						<ul>
 							{% if is_folder_permitted(db_info.folder, FolderPermission.ACCESS_DOWNLOAD) %}
-							<li><a href="{{ url_for('original', src=src, attach=1)|safe }}">Download original</a></li>
-							<li><a id="file_publish" href="{{ url_for('publish', src=src)|safe }}">Publish image</a></li>
+							<li><a href="{{ url_for('original', src=src, attach=1) }}">Download original</a></li>
+							<li><a id="file_publish" href="{{ url_for('publish', src=src) }}">Publish image</a></li>
 							{% else %}
 							<li {{ disabled_attrs }}>Download original</li>
 							<li {{ disabled_attrs }}>Publish image</li>
 							{% endif %}
 							<li class="spacer">&nbsp;</li>
 							{% if is_folder_permitted(db_info.folder, FolderPermission.ACCESS_UPLOAD) %}
-							<li><a id="file_reset" href="{{ url_for('details', src=src, reset=1)|safe }}">Reset</a></li>
+							<li><a id="file_reset" href="{{ url_for('details', src=src, reset=1) }}">Reset</a></li>
 							<li><a id="file_rename" href="#">Rename file</a></li>
 							{% else %}
 							<li {{ disabled_attrs }}>Reset</li>
