Tell the browser to cache help pages

--- a/src/imageserver/templates/base_blank.html
+++ b/src/imageserver/templates/base_blank.html
@@ -5,14 +5,16 @@
 	{% endblock %}
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta http-equiv="Cache-Control" content="no-cache" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="-1" />
-	
 	<meta name="description" content="Quru Image Server - dynamic imaging for web and print"/>
 	<meta name="viewport" content="width = device-width"/>
 	<meta name="csrf-token" content="{{ csrf_token() }}">
-	
+
+	{% block caching_head %}
+	<meta http-equiv="Cache-Control" content="no-cache" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="-1" />
+	{% endblock %}
+
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css') }}" type="text/css" />
 	<title>{{ about.__title__ }} :: {% block title %}{% endblock %}</title>
