--- a/src/imageserver/admin/templates/admin_template_list.html
+++ b/src/imageserver/admin/templates/admin_template_list.html
@@ -46,13 +46,41 @@
 			<td><a href="{{ edit_url }}">{{ template.description }}</a></td>
 			<td>
 				{% if is_permitted(SystemPermission.PERMIT_SUPER_USER) %}
+				{% if template.name|lower != system_template_value|lower %}
 				<form id="delform_{{ template.id }}" class="delform" action="{{ url_for('api.admin.template', template_id=template.id) }}" _method="delete">
 					<input type="hidden" name="del_name" value="{{ template.name }}" />
 					(<a class="action" href="#" onclick="return submitParentForm(this)">delete</a>)
 				</form>
 				{% endif %}
+				{% endif %}
 			</td>
 		</tr>
 		{% endfor %}
 	</table>
+
+	<br>
+	<h2>System default template</h2>
+	<div class="tall">
+		For image requests that do not specify a template, default image processing
+		values will be applied from this template:<br>
+
+		{% if is_permitted(SystemPermission.PERMIT_SUPER_USER) %}
+			<form id="deftemplform" action="{{ url_for('api.admin.property', property_id=system_template_key) }}" _method="put">
+			<select name="value" autocomplete="off">
+			{% for template in templates %}
+				{% set sel = 'selected="selected"' if template.name|lower == system_template_value|lower else '' %}
+				<option value="{{ template.name }}" {{ sel|safe }}>{{ template.name }}</option>
+			{% endfor %}
+			</select>
+			&nbsp;<input type="submit" value="&nbsp;Change&nbsp;" />
+			</form>
+		{% else %}
+			<select disabled="disabled">
+			<option>{{ system_template_value|capitalize }}</option>
+			</select>
+			&nbsp;
+			<span class="smalltext">The default template can be changed a system administrator.</span> 
+		{% endif %}
+	</div>
+
 {% endblock %}
