Visit us on GitHub

--- a/src/imageserver/templates/index.html
+++ b/src/imageserver/templates/index.html
@@ -46,7 +46,7 @@
 		{{ about.__copyright__ }}
 	</p>
 	<p class="center">
-		Licensed mostly under the <a href="http://www.gnu.org/licenses/agpl-3.0.txt">GNU Affero GPL</a>,<br />
-		source available <a href="{{ about.__source_uri__ }}">on GitHub</a>.
+		Licensed mostly under the <a href="http://www.gnu.org/licenses/agpl-3.0.txt">GNU Affero GPL</a>.<br />
+		<a href="{{ about.__source_uri__ }}">Visit us on GitHub</a>.
 	</p>
 {% endblock %}
