--- a/src/imageserver/templates/publish/input_AlignValidator.html
+++ b/src/imageserver/templates/publish/input_AlignValidator.html
@@ -4,7 +4,7 @@
 	<option value="L0.25" {% if default == 'l0.25' %}selected{% endif %}>Left edge at 25%</option>
 	<option value="L0.5"  {% if default == 'l0.5' %}selected{% endif %}>Left edge at 50%</option>
 	<option value="C0.25" {% if default == 'c0.25' %}selected{% endif %}>Centre at 25%</option>
-	<option value="C0.5"  {% if default == 'c0.5' or not default %}selected{% endif %}>Centre</option>
+	<option value=""  {% if default == 'c0.5' or not default %}selected{% endif %}>Centre</option>
 	<option value="C0.75" {% if default == 'c0.75' %}selected{% endif %}>Centre at 75%</option>
 	<option value="R0.5"  {% if default == 'r0.5' %}selected{% endif %}>Right edge at 50%</option>
 	<option value="R0.75" {% if default == 'r0.75' %}selected{% endif %}>Right edge at 75%</option>
@@ -15,7 +15,7 @@
 	<option value="T0.25" {% if default == 't0.25' %}selected{% endif %}>Top edge at 25%</option>
 	<option value="T0.5"  {% if default == 't0.5' %}selected{% endif %}>Top edge at 50%</option>
 	<option value="C0.25" {% if default == 'c0.25' %}selected{% endif %}>Middle at 25%</option>
-	<option value="C0.5"  {% if default == 'c0.5' or not default %}selected{% endif %}>Middle</option>
+	<option value=""  {% if default == 'c0.5' or not default %}selected{% endif %}>Middle</option>
 	<option value="C0.75" {% if default == 'c0.75' %}selected{% endif %}>Middle at 75%</option>
 	<option value="B0.5"  {% if default == 'b0.5' %}selected{% endif %}>Bottom edge at 50%</option>
 	<option value="B0.75" {% if default == 'b0.75' %}selected{% endif %}>Bottom edge at 75%</option>
